--- a/src/index.css
+++ b/src/index.css
@@ -195,8 +195,7 @@ hr {
   transform: translateY(-50%);
   padding: 0.1em 0.35em;
   background-color: hsl(var(--muted));
-  transition: transform var(--_tspeed_fast) var(--_ttype_squish),
-    background-color var(--_tspeed_fast) var(--_ttype_squish);
+  transition: transform var(--_tspeed_fast) var(--_ttype_squish);
 }
 
 .input {
